myteo/test/analyze/type_check/recursive_aliases_error/alias1.myte
module test

type alias rec_type1 = rec_type2
type alias rec_type2 = rec_type1

fun main() {}